--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -19,6 +19,21 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
+
+.layout {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 0 1.0875rem 1.45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logo-container {
+  margin: 75px 75px;
+  text-align: center;
+}
+
 article,
 aside,
 details,
