--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -610,3 +610,15 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.navigation {
+  margin: 50px 0 25px 0;
+}
+
+.navigation__link {
+  font-family: "Raleway";
+  font-weight: 600;
+  text-decoration: none;
+  color: #000;
+  margin: 0 15px;
+}
