--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -623,13 +623,13 @@ pre tt:after {
   margin: 0 15px;
 }
 
-.drink-menu {
+.menu {
   display: flex;
   flex-direction: column;
   text-align: center;
 }
 
-.drink-menu__title {
+.menu__title {
   font-family: "Raleway";
   margin: 50px 0;
 }
