--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -30,7 +30,7 @@ body {
 }
 
 .logo-container {
-  margin: 75px 75px;
+  margin: 50px 50px;
   text-align: center;
 }
 
@@ -627,6 +627,7 @@ pre tt:after {
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding-bottom: 50px;
 }
 
 .menu__title {
