--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .menu-item__title {
